--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -16,6 +16,8 @@
 
 					<%= audio_tag "happybirthday.mp3", class: "audio-play" %>
 					<%= audio_tag "xfile.mp3", class: "audio-play2" %>
+					<%= audio_tag "soga.mp3", class: "audio-play3" %>
+					<%= audio_tag "conan.mp3", class: "audio-play4" %>
 				</div>
 				
 			</div>
